--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           ISSUE_STATE: ${{ github.event.issue.state }}
       - name: Commit ilbecon.json
         run: |
-          git config user.email "nomunyan@yahoo.co.jp"
+          git config user.email "nomu_nyan@yahoo.co.jp"
           git config user.name "ilbecon Bot"
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git checkout master
