--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,9 @@ jobs:
           git config user.name "ilbecon Bot"
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git checkout master
+          git pull --rebase;
           git add .
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update ilbecon.json ${ISSUE_TITLE} #${ISSUE_NUMBER}"; git pull --rebase; git push origin master)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update ilbecon.json ${ISSUE_TITLE} #${ISSUE_NUMBER}"; git push origin master)
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           ISSUE_TITLE: ${{ github.event.issue.title }}
